--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
-    
+
+    <section class="landing-grid">
+        <header>
+            <h1>Jeremy</h1>
+            <h5>Kickass Web Dev (soon... maybe)</h5>
+        </header>
+
+        <picture id="profile">
+            <img src="img/profile.jpg" alt="Jeremy's Profile Picture">
+        </picture>
+
+        <nav class="link-list">
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+
+    </section>
     
 </body>
 </html>
