updated image for profile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
 
         <picture id="profile">
-            <img src="img/profile.jpg" alt="Jeremy's Profile Picture">
+            <img src="img/profile-escher.jpg" alt="Jeremy's Profile Picture">
         </picture>
 
         <nav class="link-list">
