minor changes before pushing to master

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <section class="landing-grid">
+    <section id="landing-grid">
         <header>
             <h1>Jeremy</h1>
             <h5>Kickass Web Dev (soon... maybe)</h5>
@@ -18,7 +18,7 @@
             <img src="img/profile-escher.jpg" alt="Jeremy's Profile Picture">
         </picture>
 
-        <nav class="link-list">
+        <nav id="link-list">
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="blog.html">Blog</a></li>
