--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Landing</title>
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/blog-landing-style.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
+
+    <header>
+        <nav id="link-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <h1>My Blog</h1>
+    <p>This is where I post things I’ve been working on, things I’m interested in and occassionally nonsensical ramblings</p>
+
+    <section id="flex-container">
+        <section class="blog-card">
+            <picture class="blog-preview-img">
+                <img src="img/trash.png" alt="Trash">
+            </picture>
+            <h3>Creating this Portfolio - Day</h3>
+            <time>Posted on August 31 2020</time>
+        </section>
+
+    </section>
     
 </body>
 </html>
