Added flex container for responsive design for blog cards

--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/blog-landing-style.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
+
 <body>
 
     <header>
@@ -20,18 +22,71 @@
     </header>
 
     <h1>My Blog</h1>
-    <p>This is where I post things I’ve been working on, things I’m interested in and occassionally nonsensical ramblings</p>
+    <p>This is where I post things I’ve been working on, things I’m interested in and occassionally nonsensical
+        ramblings</p>
 
     <section id="flex-container">
         <section class="blog-card">
             <picture class="blog-preview-img">
                 <img src="img/trash.png" alt="Trash">
             </picture>
-            <h3>Creating this Portfolio - Day</h3>
+            <h3>Creating this Portfolio - Day 5</h3>
             <time>Posted on August 31 2020</time>
+            <section class="blog-preview">
+                <p>On day 5 of working on the portfolio Jeremy discovers the benefit of throwing it all out and starting
+                    again </p>
+            </section>
         </section>
 
+        <section class="blog-card">
+            <picture class="blog-preview-img">
+                <img src="img/trash.png" alt="Trash">
+            </picture>
+            <h3>Creating this Portfolio - Day 4</h3>
+            <time>Posted on August 30 2020</time>
+            <section class="blog-preview">
+                <p>On day 5 of working on the portfolio Jeremy discovers the benefit of throwing it all out and starting
+                    again </p>
+            </section>
+        </section>
+
+        <section class="blog-card">
+            <picture class="blog-preview-img">
+                <img src="img/trash.png" alt="Trash">
+            </picture>
+            <h3>Creating this Portfolio - Day 3</h3>
+            <time>Posted on August 29 2020</time>
+            <section class="blog-preview">
+                <p>On day 5 of working on the portfolio Jeremy discovers the benefit of throwing it all out and starting
+                    again </p>
+            </section>
+        </section>
+
+        <section class="blog-card">
+            <picture class="blog-preview-img">
+                <img src="img/trash.png" alt="Trash">
+            </picture>
+            <h3>Creating this Portfolio - Day 2</h3>
+            <time>Posted on August 28 2020</time>
+            <section class="blog-preview">
+                <p>On day 5 of working on the portfolio Jeremy discovers the benefit of throwing it all out and starting
+                    again </p>
+            </section>
+        </section>
+
+        <section class="blog-card">
+            <picture class="blog-preview-img">
+                <img src="img/trash.png" alt="Trash">
+            </picture>
+            <h3>Creating this Portfolio - Day 1</h3>
+            <time>Posted on August 27 2020</time>
+            <section class="blog-preview">
+                <p>On day 5 of working on the portfolio Jeremy discovers the benefit of throwing it all out and starting
+                    again </p>
+            </section>
+        </section>
     </section>
-    
+
 </body>
+
 </html>
