Added images to blog preview components, fixed style for index so that content is always in the centre of the screen

--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
     <section id="flex-container">
         <section class="blog-card">
             <picture class="blog-preview-img">
-                <img src="img/trash.png" alt="Trash">
+                <img src="img/trash-16-9.jpg" alt="Trash">
             </picture>
             <h3>Creating this Portfolio - Day 5</h3>
             <time>Posted on August 31 2020</time>
@@ -40,49 +40,45 @@
 
         <section class="blog-card">
             <picture class="blog-preview-img">
-                <img src="img/trash.png" alt="Trash">
+                <img src="img/css-page-layout.jpg" alt="Flex and Grid Layout">
             </picture>
             <h3>Creating this Portfolio - Day 4</h3>
             <time>Posted on August 30 2020</time>
             <section class="blog-preview">
-                <p>On day 5 of working on the portfolio Jeremy discovers the benefit of throwing it all out and starting
-                    again </p>
+                <p>Day 4 as always brings new challenges. How the hell does flex and grid work and why is it so hard. </p>
             </section>
         </section>
 
         <section class="blog-card">
             <picture class="blog-preview-img">
-                <img src="img/trash.png" alt="Trash">
+                <img src="img/trio_turq2.jpg" alt="Designing for different screens">
             </picture>
             <h3>Creating this Portfolio - Day 3</h3>
             <time>Posted on August 29 2020</time>
             <section class="blog-preview">
-                <p>On day 5 of working on the portfolio Jeremy discovers the benefit of throwing it all out and starting
-                    again </p>
+                <p>On to day 3 and I start to realise the importance of mobile first design. This realisation changes everything.</p>
             </section>
         </section>
 
         <section class="blog-card">
             <picture class="blog-preview-img">
-                <img src="img/trash.png" alt="Trash">
+                <img src="img/Chronic_fatigue_syndrome_1920_1080.jpg" alt="Student sleeping at desk with coffees">
             </picture>
             <h3>Creating this Portfolio - Day 2</h3>
             <time>Posted on August 28 2020</time>
             <section class="blog-preview">
-                <p>On day 5 of working on the portfolio Jeremy discovers the benefit of throwing it all out and starting
-                    again </p>
+                <p>Beep boop it’s day 2 and my brain is already mush and I need a nap. Let’s keep going through the motions and see what happens.</p>
             </section>
         </section>
 
         <section class="blog-card">
             <picture class="blog-preview-img">
-                <img src="img/trash.png" alt="Trash">
+                <img src="img/portfolio-code.jpg" alt="Screenshot of the code for the portfolio">
             </picture>
             <h3>Creating this Portfolio - Day 1</h3>
             <time>Posted on August 27 2020</time>
             <section class="blog-preview">
-                <p>On day 5 of working on the portfolio Jeremy discovers the benefit of throwing it all out and starting
-                    again </p>
+                <p>It’s day 1 of the first assignment with Coder Academy. Time to create a portfolio website using HTML + CSS.</p>
             </section>
         </section>
     </section>
