--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
-
+<div id="parent">
     <section id="landing-grid">
         <header>
             <h1>Jeremy</h1>
@@ -26,8 +26,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-
     </section>
-    
+</div>
 </body>
 </html>
