Renamed blog images for simplicity, added png of sitemap

--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
     <section id="flex-container">
         <section class="blog-card">
             <picture class="blog-preview-img">
-                <img src="img/trash-16-9.jpg" alt="Trash">
+                <img src="img/blog5.jpg" alt="Trash">
             </picture>
             <h3>Creating this Portfolio - Day 5</h3>
             <time>Posted on August 31 2020</time>
@@ -40,7 +40,7 @@
 
         <section class="blog-card">
             <picture class="blog-preview-img">
-                <img src="img/css-page-layout.jpg" alt="Flex and Grid Layout">
+                <img src="img/blog4.jpg" alt="Flex and Grid Layout">
             </picture>
             <h3>Creating this Portfolio - Day 4</h3>
             <time>Posted on August 30 2020</time>
@@ -51,7 +51,7 @@
 
         <section class="blog-card">
             <picture class="blog-preview-img">
-                <img src="img/trio_turq2.jpg" alt="Designing for different screens">
+                <img src="img/blog3.jpg" alt="Designing for different screens">
             </picture>
             <h3>Creating this Portfolio - Day 3</h3>
             <time>Posted on August 29 2020</time>
@@ -62,7 +62,7 @@
 
         <section class="blog-card">
             <picture class="blog-preview-img">
-                <img src="img/Chronic_fatigue_syndrome_1920_1080.jpg" alt="Student sleeping at desk with coffees">
+                <img src="img/blog2.jpg" alt="Student sleeping at desk with coffees">
             </picture>
             <h3>Creating this Portfolio - Day 2</h3>
             <time>Posted on August 28 2020</time>
@@ -73,7 +73,7 @@
 
         <section class="blog-card">
             <picture class="blog-preview-img">
-                <img src="img/portfolio-code.jpg" alt="Screenshot of the code for the portfolio">
+                <img src="img/blog1.jpg" alt="Screenshot of the code for the portfolio">
             </picture>
             <h3>Creating this Portfolio - Day 1</h3>
             <time>Posted on August 27 2020</time>
