Added Art Direction to blog image, styled blog post

--- a/blog.html
+++ b/blog.html
@@ -27,10 +27,14 @@
 
     <section id="flex-container">
         <section class="blog-card">
+            <a href="blog5.html">
             <picture class="blog-preview-img">
-                <img src="img/blog5.jpg" alt="Trash">
+                <img src="img/blog5-small.jpg" alt="Trash">
             </picture>
+        </a>
+        <a href="blog5.html">
             <h3>Creating this Portfolio - Day 5</h3>
+        </a>
             <time>Posted on August 31 2020</time>
             <section class="blog-preview">
                 <p>On day 5 of working on the portfolio Jeremy discovers the benefit of throwing it all out and starting
