--- a/about.html
+++ b/about.html
@@ -19,9 +19,10 @@
             </picture>
             <section id="bio">
                 <blockquote>"If you couldn't fail what would you achieve?"</blockquote>
-                I have always been a dreamer, those dreams have rarely turned to success but I believe failure is
+                <p>I have always been a dreamer, those dreams have rarely turned to success but I believe failure is
                 seldom permanent. Over the years I feel that I have really gotten to know myself.
                 Instead of detailing my history I am going to share my core values, my limiting beliefs, my ambitions.
+            </p>
             </section>
 
         </section>
