Updated README.md to follow spec outlined by assignment

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                 <img src="img/profile-escher.jpg" alt="Picture of Jeremy">
             </picture>
             <section id="bio">
-                <blockquote>"If you couldn't fail what would you achieve?"</blockquote>
+                <blockquote>"Sucking at something is the first step to becoming sorta good at something"<br> &mdash; <em>Jake the Dog</em></blockquote>
                 <p>I have always been a dreamer, those dreams have rarely turned to success but I believe failure is
                 seldom permanent. Over the years I feel that I have really gotten to know myself.
                 Instead of detailing my history I am going to share my core values, my limiting beliefs, my ambitions.
