More work on about, created tasks.md to track tasks to complete before submission

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 
         </section>
         <section id="right-side">
-            <section class="content" id="likes">
+            <!-- <section class="content" id="likes">
                 <h2>I like:</h2>
                 <ul>
                     <li>Gaming</li>
@@ -35,16 +35,36 @@
                     <li>Lord of the Rings</li>
                     <li>Pizza</li>
                 </ul>
+            </section> -->
+
+            <section class="content" id="values">
+                <h2>Values</h2>
+                <ul>
+                    <li>Gaming</li>
+                    <li>Survivor</li>
+                    <li>Lord of the Rings</li>
+                    <li>Pizza</li>
+                </ul>
             </section>
+            
             <section class="content" id="skills">
-                <h2>I can:</h2>
+                <h2>Skills</h2>
                 <ul>
                     <li>HTML + CSS</li>
                     <li>Not touch my toes</li>
                     <li>Ruby</li>
                     <li>C</li>
                 </ul>
+            </section>
 
+            <section class="content" id="ambitions">
+                <h2>Ambitions</h2>
+                <ul>
+                    <li>Gaming</li>
+                    <li>Survivor</li>
+                    <li>Lord of the Rings</li>
+                    <li>Pizza</li>
+                </ul>
             </section>
         </section>
         <section id="last-fr"></section>
