Added lorem ipsum to blogs and corrected previous, blog home, next links for blog navigation, HTML + CSS commenting

--- a/about.html
+++ b/about.html
@@ -10,30 +10,34 @@
 </head>
 
 <body>
+    <!-- Grid container for layout -->
     <section id="grid-container">
-
+        <!-- Left side content -->
         <section id="left-side">
             <h1 id="feature-title">Who me?</h1>
             <picture id="profile-picture">
                 <img src="img/profile-escher.jpg" alt="Picture of Jeremy">
             </picture>
+            <!-- Group together important quote, small bio paragraph, link to resume -->
             <section id="bio">
                 <blockquote>"Sucking at something is the first step to becoming sorta good at something"<br> &mdash;
                     <em>Jake the Dog</em></blockquote>
                 <p>I have always been a dreamer, those dreams have rarely turned to success but I believe failure is
                     seldom permanent. Over the years I feel that I have really gotten to know myself.
-                    Instead of detailing my history I am going to share my core values, my skills, my ambitions and some of the things I like. If
-                    you think we might be able to work together please check out my resume and get in contact.
+                    Instead of detailing my history I am going to share my core values, my skills, my ambitions and some of the things I like. 
+                </p>
+                <p>
+                    If you think we might be able to work together please check out my resume and get in contact.
                 </p>
 
                 <a href="resume.pdf" id="resume">Resume</a>
             </section>
 
         </section>
+        <!-- Right side content -->
         <section id="right-side">
-            
-
-            <section class="content" id="values">
+            <!-- Content boxes for Values, Skills, Ambitions, Likes -->
+            <section class="content">
                 <h2>Values</h2>
                 <ul>
                     <li>Ambition</li>
@@ -43,7 +47,7 @@
                 </ul>
             </section>
 
-            <section class="content" id="skills">
+            <section class="content">
                 <h2>Skills</h2>
                 <ul>
                     <li>HTML, CSS</li>
@@ -53,7 +57,7 @@
                 </ul>
             </section>
 
-            <section class="content" id="ambitions">
+            <section class="content">
                 <h2>Ambitions</h2>
                 <ul>
                     <li>Move to the UK</li>
@@ -62,7 +66,7 @@
                 </ul>
             </section>
 
-            <section class="content" id="likes">
+            <section class="content">
                 <h2>Likes</h2>
                 <ul>
                     <li><strong>Games:</strong> Mass Effect Trilogy, Bioshock, Ocarina of Time</li>
@@ -74,6 +78,7 @@
             </section>
         </section>
         <section id="last-fr"></section>
+        <!-- Navigation Bar in Footer -->
         <footer id="nav-footer">
             <nav id="nav-list">
                 <li><a href="index.html">Home</a></li>
