Added comments to HTML components

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <section id="grid-container">
         <!-- Left side content -->
         <section id="left-side">
-            <h1 id="feature-title">Who me?</h1>
+            <h1 id="feature-title">Who, me?</h1>
             <picture id="profile-picture">
                 <img src="img/profile-escher.jpg" alt="Picture of Jeremy">
             </picture>
