--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-
+    <!-- Header component with nav bar, title and blog introduction -->
     <header>
+        <!-- Navigation Bar with links to other pages -->
         <nav id="link-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,13 +20,16 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    
 
     <h1>My Blog</h1>
     <p>This is where I post things I’ve been working on, things I’m interested in and occassionally nonsensical
         ramblings</p>
+    </header>
 
+    <!-- Flex container holds the 5 most recent blogs so that they display responsively -->
     <section id="flex-container">
+        <!-- Blog card components inlcude link to post, preview image, title, date posted and blog teaser -->
         <section class="blog-card">
             <a href="blog5.html">
             <picture class="blog-preview-img">
