--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
+<!-- Parent grid helps center rest of the page  -->
 <div id="parent">
+    <!-- Landing grid holds all the components together in the center -->
     <section id="landing-grid">
+        <!-- Header with title and tagline -->
         <header>
             <h1>Jeremy</h1>
             <h5>Kickass Web Dev (soon... maybe)</h5>
         </header>
-
+        <!-- Profile Picture -->
         <picture id="profile">
             <img src="img/profile-escher.jpg" alt="Jeremy's Profile Picture">
         </picture>
-
+        <!-- Navigation Bar with links to other pages -->
         <nav id="link-list">
             <ul>
                 <li><a href="about.html">About</a></li>
