--- a/blog2.html
+++ b/blog2.html
@@ -12,15 +12,16 @@
 <body>
 <section id="parent">
     <header>
-        <nav id="link-nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-
-
+            <!-- Navigation Bar with links to other pages -->
+            <nav id="link-nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+    
+            <!-- Navigation Bar with links to previous post, blog home and next blog -->
         <nav id="blog-nav">
             <ul>
                 <li><a href="blog1.html">&lAarr; Previous</a></li>
@@ -29,8 +30,8 @@
             </ul>
         </nav>
 
+        <!-- Component for title box with title, date posted and blog teaser -->
         <section id="title-box">
-            <div class="content-container"></div>
             <h2>Creating This Portfolio - Day 2</h2>
             <p>Beep boop it’s day 2 and my brain is already mush and I need a nap. Let’s keep going through the motions and see what happens.
             </p>
@@ -39,7 +40,10 @@
         </section>
     </header>
 
+
+    <!-- Article element containing image and paragraphs for blog text -->
     <article class="content-container">
+        <!-- Picture element, used with srcset to allow browser to select which image to load based on window size -->
         <picture class="blog-image">
             <source media="(min-width: 1024px") srcset="img/blog5-large.jpg">
             <source media="(min-width: 768px") srcset="img/blog5-medium.jpg">
