Fixed Styling on Blog landing page and blog post pages

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
         <section id="last-fr"></section>
         <!-- Navigation Bar in Footer -->
         <footer id="nav-footer">
-            <nav id="nav-list">
+            <nav class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
