--- a/blog2.html
+++ b/blog2.html
@@ -13,7 +13,7 @@
 <section id="parent">
     <header>
             <!-- Navigation Bar with links to other pages -->
-            <nav id="link-nav">
+            <nav class="nav-list">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -22,7 +22,7 @@
             </nav>
     
             <!-- Navigation Bar with links to previous post, blog home and next blog -->
-        <nav id="blog-nav">
+            <nav class="blog-list">
             <ul>
                 <li><a href="blog1.html">&lAarr; Previous</a></li>
                 <li><a href="blog.html">Blog Home</a></li>
