--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <!-- Navigation Bar with links to other pages -->
-        <nav id="link-nav">
+        <nav class="nav-list">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
