Added content to contact.html including social media icons and links to social media account, added contact-style.css and completed styling for contact page

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,58 @@
             </ul>
         </nav>
     </header>
+
+<!-- Parent div used to help align content -->
+<div id="parent">
+    <!-- Flex-container used to contain all of the icon containers  -->
+    <section id="flex-container">
+        <!-- Icon containers used to group together social media icon, link text -->
+        <section class="icon-container">
+            <a href="https://www.linkedin.com/in/jeremy-bell91/">
+                <img src="/img/linkedin-logo.png" alt="LinkedIn Logo">
+                <h4> /jeremy-bell91</h4>
+            </a>
+        </section>
+
+        <section class="icon-container">
+            <a href="https://www.instagram.com/jeremy.bell91/">
+                <img src="/img/instagram-logo.png" alt="Instagram Logo">
+                <h4> /jeremy.bell91</h4>
+            </a>
+        </section>
+
+        <section class="icon-container">
+            <a href="https://twitter.com/Jezzabell_Codes">
+                <img src="/img/twitter-logo.png" alt="Twitter Logo">
+                <h4> @Jezzabell_Codes</h4>
+            </a>
+        </section>
+
+        <section class="icon-container">
+            <a href="https://github.com/Jezzabell91">
+                <img src="/img/github-logo.png" alt="Github Logo">
+                <h4> /Jezzabell91</h4>
+            </a>
+        </section>
+
+
+        <section class="icon-container" id="gmail">
+            <a href="mailto:jeremy.bell91@gmail.com">
+                <img src="/img/gmail-logo.png" alt="Gmail Logo">
+                <h4> jeremy.bell91<br>@gmail.com</h4>
+            </a>
+        </section>
+
+
+        <section class="icon-container">
+            <a href="https://medium.com/@jeremy.bell91">
+                <img src="/img/medium-logo.png" alt="Medium Logo">
+                <h4> @jeremy.bell91</h4>
+            </a>
+        </section>
+
+    </section>
+</div>
 </body>
 
 </html>
