Fixed styling for blog post pages

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                     If you think we might be able to work together please check out my resume and get in contact.
                 </p>
 
-                <a href="resume.pdf" id="resume">Resume</a>
+                <a href="fakeresume.pdf" id="resume">Resume</a>
             </section>
 
         </section>
@@ -80,7 +80,7 @@
         <section id="last-fr"></section>
         <!-- Navigation Bar in Footer -->
         <footer id="nav-footer">
-            <nav class="nav-list">
+            <nav id="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
