--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
     <!-- Header component with nav bar, title and blog introduction -->
     <header>
         <!-- Navigation Bar with links to other pages -->
-        <nav class="nav-list">
+        <nav id="nav-list">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
