--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <!-- Navigation Bar with links to other pages -->
-        <nav class="nav-list">
+        <nav id="nav-list">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
